@@ -1,11 +1,9 @@
 package natlab.toolkits.analysis.core;
 
-import static com.google.common.base.Predicates.in;
-import static com.google.common.base.Predicates.not;
-
+import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-import natlab.utils.AstFunctions;
 import natlab.utils.NodeFinder;
 import analysis.BackwardAnalysis;
 import ast.ASTNode;
@@ -18,8 +16,6 @@ import ast.NameExpr;
 import ast.ParameterizedExpr;
 import ast.Script;
 import ast.Stmt;
-
-import com.google.common.collect.Sets;
 
 public class LivenessAnalysis extends
 BackwardAnalysis<Set<String>> {
@@ -56,7 +52,7 @@ BackwardAnalysis<Set<String>> {
   @Override
   public void caseAssignStmt(AssignStmt s) {
     outFlowSets.put(s, copy(currentOutSet));
-    Set<NameExpr> lValues = Sets.newHashSet();
+    Set<NameExpr> lValues = new HashSet<>();
 
     if (s.getLHS() instanceof MatrixExpr) {
       for (Expr expr : ((MatrixExpr) s.getLHS()).getRow(0).getElements()) {
@@ -72,9 +68,9 @@ BackwardAnalysis<Set<String>> {
 
     caseASTNode(s.getRHS());
     currentOutSet.addAll(NodeFinder.find(NameExpr.class, s)
-        .filter(not(in(lValues)))
-        .transform(AstFunctions.nameExprToID())
-        .toList());
+        .filter(name -> !lValues.contains(name))
+        .map(name -> name.getName().getID())
+        .collect(Collectors.toList()));
 
     inFlowSets.put(s, copy(currentInSet));
   }
@@ -99,18 +95,18 @@ BackwardAnalysis<Set<String>> {
 
   @Override
   public Set<String> copy(Set<String> source) {
-    return Sets.newHashSet(source);
+    return new HashSet<>(source);
   }
 
   @Override
   public Set<String> merge(Set<String> in1, Set<String> in2) {
-    Set<String> out = Sets.newHashSet(in1);
+    Set<String> out = new HashSet<>(in1);
     out.addAll(in2);
     return out;
   }
 
   @Override
   public Set<String> newInitialFlow() {
-    return Sets.newHashSet();
+    return new HashSet<>();
   }
 }
